--- a/User_embedding_priming.ipynb
+++ b/User_embedding_priming.ipynb
@@ -1,74 +1,61 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "user_embeddings_priming.ipynb",
-      "provenance": [],
-      "collapsed_sections": [
-        "Z45NxNVMOUVv"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KCpE8Xuw9AmE",
+        "outputId": "e17bdd72-0ba4-439a-c070-83cbc7a463a7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "import os\n",
         "os.chdir(\"/content/drive/My Drive/SPIRS\")"
-      ],
-      "metadata": {
-        "id": "KCpE8Xuw9AmE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e17bdd72-0ba4-439a-c070-83cbc7a463a7"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#USER HISTORY"
-      ],
       "metadata": {
         "id": "Z45NxNVMOUVv"
-      }
+      },
+      "source": [
+        "#USER HISTORY"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1MygapyFJF3z"
+      },
+      "outputs": [],
       "source": [
         "OUTPUT_FILE_HISTORY = 'user_embeddings_non_sarcastic_history_50.csv'   #file in which we write user history\n",
         "INPUT_FILE = 'spirs_history/SPIRS-non-sarcastic-history.txt'\n",
         "TOKENS_NO = 50"
-      ],
-      "metadata": {
-        "id": "1MygapyFJF3z"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mDAy-oaNf--8"
+      },
+      "outputs": [],
       "source": [
         "import random\n",
         "import nltk\n",
@@ -127,35 +114,35 @@
         "\n",
         "          old_user_id = user_id\n",
         "          "
-      ],
-      "metadata": {
-        "id": "mDAy-oaNf--8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#CONCAT USER HISTORY WITH TWEETS"
-      ],
       "metadata": {
         "id": "uCzN2XrBMtYG"
-      }
+      },
+      "source": [
+        "#CONCAT USER HISTORY WITH TWEETS"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install emoji"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "X7P-9F6vEjnB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install emoji"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6pmF-6m4dZBX"
+      },
+      "outputs": [],
       "source": [
         "from csv import reader\n",
         "import csv\n",
@@ -177,15 +164,15 @@
         "for i in range(len(df['sar_user'])):\n",
         "  user = df['sar_user'][i].split('|')\n",
         "  df['sar_user'][i] = int(user[-1])"
-      ],
-      "metadata": {
-        "id": "6pmF-6m4dZBX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "963XS9XrMtFG"
+      },
+      "outputs": [],
       "source": [
         "os.chdir(\"/content/drive/My Drive/SP\")\n",
         "\n",
@@ -213,12 +200,32 @@
         "      extended_tweet = '[CLS] ' + tweets[i] + ' [SEP] ' + row[1] \n",
         "    \n",
         "    writer.writerow([str(row[0]), str(sar_id[i]), extended_tweet])   #user_id, sar_id, tweet + history"
-      ],
-      "metadata": {
-        "id": "963XS9XrMtFG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "Z45NxNVMOUVv"
+      ],
+      "name": "user_embeddings_priming.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.13 64-bit (windows store)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "ca897458d0c37cfffe0a41b71a9fe69a0f445e631cc3deb43972b8564af24595"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
